@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.382 2005/09/18 01:13:21 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.383 2005/09/18 02:28:13 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  17 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIStorageDevice.py:
+  added do_recommended() function to automatically created 256M/1G/* layout
 
   17 Sep 2005; Preston Cody <codeman@gentoo.org>
   src/gli-dialog.py:  added set_distcc to the list
